--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <link async href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     
     <title>Quiz</title>
   </head>
